[package]
name = "kharbranth"
version = "0.3.1"
edition = "2024"

[lib]
name = "kharbranth"
path = "src/lib.rs"

[[bin]]
name = "test-hyperliquid"
path = "src/bin/test-hyperliquid.rs"

[dependencies]
tokio-tungstenite = { version = "0.26.2", features = ["native-tls"] }
tokio = { version = "1.45.1", features = ["full"] }
futures-util = { version = "0.3", features = ["std", "sink"] }
tokio-util = "0.7.15"
anyhow = "1.0.95"
env_logger = "0.11.8"
log = "0.4.27"
thiserror = "2.0.12"
tokio-test = "0.4.4"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
dashmap = "6.1"
